style: Style 'form' section frameworks-and-preprocessors/css/style.css

--- a/frameworks-and-preprocessors/css/style.css
+++ b/frameworks-and-preprocessors/css/style.css
@@ -17,3 +17,22 @@
     text-align: center;
   }
 }
+
+form {
+  & label:nth-child(1) {
+    display: block;
+  }
+}
+
+input {
+  border: 2px solid tomato;
+}
+
+label {
+  font-family: system-ui;
+  font-size: 1.25rem;
+
+  input {
+    border: 2px dashed #00f;
+  }
+}
