--- a/intermediate-html-and-css/more-text-styles/css/web-font-start.css
+++ b/intermediate-html-and-css/more-text-styles/css/web-font-start.css
@@ -10,10 +10,12 @@ body {
   width: 80%;
   max-width: 800px;
   margin: 0 auto;
-  font-family: "Edu AU VIC WA NT Hand", cursive;
+  font-family: "Edu AU VIC WA NT Hand", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, cursive;
   font-optical-sizing: auto;
   font-weight: 700;
   font-style: normal;
+  color: red;
+  font-display: swap;
 }
 
 /* Typography */
