--- a/intermediate-html-and-css/form-basics/css/styles.css
+++ b/intermediate-html-and-css/form-basics/css/styles.css
@@ -122,16 +122,37 @@ body {
   font-size: 14px;            /* This won't work in Chrome or Safari */
 }
 
+.form-row textarea {
+  font-family: "Helvetica", "Arial", sans-serif;
+  font-size: 14px;
+
+  border: 1px solid #D6D9DC;
+  border-radius: 3px;
+
+  min-height: 200px;
+  margin-bottom: 10px;
+  padding: 7px;
+  resize: none;
+}
+
+.form-row .instructions {
+  color: #999999;
+  font-size: 14px;
+  margin-bottom: 30px;
+}
+
 @media only screen and (min-width: 700px) {
   .speaker-form-header,
   .speaker-form {
     width: 600px;
   }
+  
   .form-row {
     flex-direction: row;
     align-items: flex-start; /* To avoid stretching */
     margin-bottom: 20px;
   }
+
   .form-row input[type='text'],
   .form-row input[type='email'],
   .form-row select,
@@ -139,6 +160,7 @@ body {
     width: 250px;
     height: initial;
   }
+
   .form-row label {
     text-align: right;
     width: 120px;
@@ -149,12 +171,18 @@ body {
   .legacy-form-row {
     margin-bottom: 10px;
   }
+
   .legacy-form-row legend {
     width: 120px;
     text-align: right;
     padding-right: 20px;
   }
+
   .legacy-form-row legend {
     float: left;
+  }
+
+  .form-row .instructions {
+    margin-left: 120px;
   }
 }
