--- a/intermediate-html-and-css/form-basics/css/styles.css
+++ b/intermediate-html-and-css/form-basics/css/styles.css
@@ -141,12 +141,38 @@ body {
   margin-bottom: 30px;
 }
 
+.form-row .checkbox-label {
+  margin-bottom: 0;
+}
+
+.form-row button {
+  font-size: 16px;
+  font-weight: bold;
+
+  color: #FFFFFF;
+  background-color: #5995DA;
+
+  border: none;
+  border-radius: 3px;
+
+  padding: 10px 40px;
+  cursor: pointer;
+}
+
+.form-row button:hover {
+  background-color: #76AEED;
+}
+
+.form-row button:active {
+  background-color: #407FC7;
+}
+
 @media only screen and (min-width: 700px) {
   .speaker-form-header,
   .speaker-form {
     width: 600px;
   }
-  
+
   .form-row {
     flex-direction: row;
     align-items: flex-start; /* To avoid stretching */
@@ -183,6 +209,15 @@ body {
   }
 
   .form-row .instructions {
+    margin-left: 120px;
+  }
+
+  .form-row .checkbox-label {
+    margin-left: 120px;
+    width: auto;
+  }
+
+  .form-row button {
     margin-left: 120px;
   }
 }
